--- a/index.html
+++ b/index.html
@@ -2,8 +2,63 @@
 <html>
 <head>
 	<title>Minnesota Food Charter</title>
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/myscripts.js"></script>
 </head>
 <body>
+
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fff5e9;">
+  <a class="navbar-brand" href="#"><img src="img/mfclogo.png" width="250"></a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul id="nav" class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="map.html">Map</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Blog</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="video-container">
+	<video id="myVideo" autoplay loop>
+		<source src="img/homevideo.mp4" type="video/mp4">
+	</video>
+	<div class="overlay-desc">
+	<h1 style="color:white"> Because everyone deserves access to healthy, safe, and affordable food. 
+	</h1>
+	</div>
+</div>
+
+Champion1: NADJA BERNECHE
+HEALTHY COMPREHENSIVE PLAN DIRECTOR, TERRA SOMA
+FOOD INFRASTRUCTURE
+
+Champion2: AMANDA SHONGO
+STATEWIDE HEALTH IMPROVEMENT PROGRAMS (SHIP) COORDINATOR, LEECH LAKE BAND OF OJIBWE
+FOOD ACCESSIBILITY
+
+Champion3: AMANDA SHONGO
+STATEWIDE HEALTH IMPROVEMENT PROGRAMS (SHIP) COORDINATOR, LEECH LAKE BAND OF OJIBWE
+FOOD ACCESSIBILITY
+
+Champion4: REGINALDO HASLETT-MARROQUIN
+CHIEF STRATEGY OFFICER, MAIN STREET PROJECT
+FOOD INFRASTRUCTURE
 
 </body>
 </html>
