--- a/about.html
+++ b/about.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Minnesota Food Charter</title>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
@@ -12,7 +12,7 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fff5e9;">
-  <a class="navbar-brand" href="#"><img src="img/mfclogo.png" width="250"></a>
+  <a class="navbar-brand" href="index.html"><img src="img/mfclogo.png" width="250"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -34,7 +34,7 @@
   </div>
 </nav>
 
-<iframe width="960" height="530" src="https://www.youtube.com/embed/iay2qLznwbM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<iframe src="https://www.youtube.com/embed/iay2qLznwbM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 </body>
 </html>
