--- a/map.html
+++ b/map.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>Minnesota Food Charter</title>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
   <link rel="stylesheet" href="https://js.arcgis.com/3.23/esri/css/esri.css">
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
@@ -43,10 +43,13 @@ require([
       mode: FeatureLayer.MODE_ONDEMAND,
       outFields: ["*"]
     });
+        minnesota.on("load", function(){
+          minnesota.renderer.setColorInfo({field: 'Region', colors: ['#ffffff']});
+          minnesota.renderer.setOpacityInfo({opacityValues: [0.00]});
+        });
 
-    var survey123 = new FeatureLayer("https://services.arcgis.com/8df8p0NlLFEShl0r/ArcGIS/rest/services/service_82e68804f768442095abdd9ee6d2e6fe/FeatureServer/0", {
-      mode: FeatureLayer.MODE_ONDEMAND,
-      outFields: ["*"]
+    var survey123 = new FeatureLayer("https://services.arcgis.com/8df8p0NlLFEShl0r/arcgis/rest/services/survey123_c66836257a704559b65408fa7c068782/FeatureServer/0", {
+      mode: FeatureLayer.MODE_ONDEMAND
     });
 
     map.on("layers-add-result", function (evt) {
@@ -71,7 +74,7 @@ require([
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #fff5e9;">
-  <a class="navbar-brand" href="#"><img src="img/mfclogo.png" width="250"></a>
+  <a class="navbar-brand" href="index.html"><img src="img/mfclogo.png" width="250"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
