code that adds map and work on other tabs

--- a/about.html
+++ b/about.html
@@ -18,11 +18,11 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul id="nav" class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link active" href="about.html">About</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="map.html">Map</a>
@@ -35,6 +35,25 @@
 </nav>
 
 <iframe src="https://www.youtube.com/embed/iay2qLznwbM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+<div style="bottom: -40px;" id="champion">
+  <p><strong>About</strong></p>
+</div>
+
+<div id="about">
+  <p>The Minnesota Food Charter is a roadmap designed to guide policymakers and community leaders in providing Minnesotans with equal access to affordable, safe, and healthy food regardless of where they live. 
+  <p>This access improves the health and wellbeing of residents and also has the potential to significantly improve the state's economy.</p>
+</div>
+<div id="about2">
+  <h3><strong>A Planning and Action Guide for Everyone</strong></h3><br>
+  <p>The strategies for policy and systems change described in the Food Charter are designed to reduce the risk and cost of obesity and diet-related diseases, like diabetes, and heart disease; conserve state resources; and boost economic prosperity.</p>
+</div>
+<div id="about3">
+  <h3><strong>The Result of Robust Public Engagement</strong></h3><br>
+  <p>Thousands of Minnesotans in many communities and organizations helped develop the Food Charter. We also consulted experts and sought out the most current research on effective strategies for overcoming Minnesotas barriers to healthy food access.</p>
+</div>
+
+<div id="line2"></div>
 
 </body>
 </html>
