--- a/index.html
+++ b/index.html
@@ -44,8 +44,13 @@
 	</div>
 </div>
 
+<div id="champion">
+  <p><strong>Featured Food Charter Champion</strong></p>
+</div>
+
 <div id="footer"></div>
 <div id="random"></div>
+<div id="line"></div>
 
 </body>
 </html>
