--- a/map.html
+++ b/map.html
@@ -1,74 +1,171 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 	<title>Minnesota Food Charter</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.6/esri/css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
-  <link rel="stylesheet" href="https://js.arcgis.com/3.23/esri/css/esri.css">
 	<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/myscripts.js"></script>
-  <script src="https://js.arcgis.com/3.23/"></script>
+  <script src="https://js.arcgis.com/4.6/"></script>
 
+    <style>
+    #viewDiv {
+      height: 800px;
+      width: 1000px;
+      left: 50%;
+      margin-left: -500px;
+      position: absolute;
+    }
 
-<script>
-require([
-    "esri/map",
-    "esri/layers/FeatureLayer",
-    "esri/dijit/Legend",
-    "dojo/_base/array",
-    "dojo/parser",
-    "dijit/layout/BorderContainer",
-    "dijit/layout/ContentPane", 
-    "dijit/layout/AccordionContainer",
-    "dojo/domReady!"
-  ],
-  function(
-    Map,
-    FeatureLayer,
-    Legend,
-    arrayUtils,
-    parser
-  ) {
-    parser.parse();
+    #sidebar {
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.5);
+      width: 210px;
+    }
+    #text {
+      color: white;
+      padding: 4%;
+    }
 
-    var map = new Map("map", {
-      basemap: "topo",
-      center: [-93.749, 46.485],
-      zoom: 6
-    });
+    </style>
+    <script>
+      require([
+          "esri/Map",
+          "esri/views/MapView",
+          "esri/layers/FeatureLayer",
+          "esri/widgets/Legend",
+          "esri/widgets/Search",
+          "dojo/domReady!"
+        ], function(Map, MapView, FeatureLayer, Legend, Search) {
 
-    var minnesota = new FeatureLayer("https://services.arcgis.com/8df8p0NlLFEShl0r/ArcGIS/rest/services/MN_Counties_NetworkCount/FeatureServer/0", {
-      mode: FeatureLayer.MODE_ONDEMAND,
-      outFields: ["*"]
-    });
-        minnesota.on("load", function(){
-          minnesota.renderer.setColorInfo({field: 'Region', colors: ['#ffffff']});
-          minnesota.renderer.setOpacityInfo({opacityValues: [0.00]});
+        var searchWidget = new Search({
+          view: view
         });
 
-    var survey123 = new FeatureLayer("https://services.arcgis.com/8df8p0NlLFEShl0r/arcgis/rest/services/survey123_c66836257a704559b65408fa7c068782/FeatureServer/0", {
-      mode: FeatureLayer.MODE_ONDEMAND
-    });
+        var popupSurvey = {
+          "content": "<h5>{field_0}</h5><b>Description:</b> {field_2}<br><b>Connected to a Food Network?:</b> {field_3} {field_4}<br><b>Food Categories:</b> {field_6}<br>"
+        };
 
-    map.on("layers-add-result", function (evt) {
-      var layerInfo = arrayUtils.map(evt.layers, function (layer, index) {
-        return {layer:layer.layer, title:layer.layer.name};
-      });
-      if (layerInfo.length > 0) {
-        var legendDijit = new Legend({
+        var skills = {
+          type: "simple-marker",
+          color: "#DE6B48"
+        }; 
+
+        var affordability = {
+          type: "simple-marker",
+          color: "#E5B181"
+        };  
+
+         var availability = {
+          type: "simple-marker",
+          color: "#F4B9B2"
+        };      
+
+        var accessibility = {
+          type: "simple-marker",
+          color: "#DAEDBD"
+        }; 
+
+        var infrastructure = {
+          type: "simple-marker",
+          color: "#7DBBC3"
+        }; 
+
+        var surveyRenderer = {
+          type: "unique-value",
+          field: "field_6",
+          uniqueValueInfos: [{
+            value: "choice0",
+            symbol: skills,
+            label: "Skills"
+          }, {
+            value: "choice1",
+            symbol: affordability,
+            label: "Affordability"
+          }, {
+            value: "choice2",
+            symbol: availability,
+            label: "Availability"
+          }, {
+            value: "choice3",
+            symbol: accessibility,
+            label: "Accessibility"
+          }, {
+            value: "choice4",
+            symbol: infrastructure,
+            label: "Infrastructure"
+          }]
+        };  
+
+        var survey123 = new FeatureLayer({
+        url: "https://services.arcgis.com/8df8p0NlLFEShl0r/arcgis/rest/services/survey123_c66836257a704559b65408fa7c068782/FeatureServer/0",
+        renderer: surveyRenderer,
+        outFields: ["field_0", "field_2", "field_3", "field_4", "field_6"],
+        popupTemplate: popupSurvey
+        });    
+
+        var symMN = {
+          type: "simple-fill",
+          color: [0,0,0, 0.0],
+          outline: {
+            color: "gray",
+            width: 1
+          }
+        };
+
+        var mnRenderer = {
+          type: "unique-value",
+          defaultSymbol: symMN,
+          defaultLabel: "Minnesota"
+        };
+
+        var minnesota = new FeatureLayer({
+          url: "https://services.arcgis.com/8df8p0NlLFEShl0r/ArcGIS/rest/services/MN_Counties_NetworkCount/FeatureServer/0",
+          renderer: mnRenderer
+        });
+
+        var map = new Map({
+          basemap: "topo-vector"
+        });
+
+        var view = new MapView({
+          container: "viewDiv",
           map: map,
-          layerInfos: layerInfo
-        }, "legendDiv");
-        legendDijit.startup();
-      }
+          center: [-93.749, 46.485],
+          zoom: 5,
+          padding: { left: 220}
         });
 
-    map.addLayers([minnesota, survey123]);
+        map.add(minnesota);
+        map.add(survey123);
 
-  });
-</script>
+        var legend = new Legend({
+          view: view,
+          layerInfos: [
+          {
+            layer: minnesota,
+            title: "Minnesota Food Charter"
+          },
+          {
+            layer: survey123,
+            title: "Survey Results"
+          }]
+
+        });
+
+        view.ui.add(legend, "bottom-left");
+        view.ui.add(searchWidget, {position: "top-right"});
+      });
+    </script>
 
 </head>
 <body>
@@ -80,13 +177,13 @@ require([
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul id="nav" class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="about.html">About</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link" href="map.html">Map</a>
       </li>
       <li class="nav-item">
@@ -96,34 +193,21 @@ require([
   </div>
 </nav>
 
-<div id="content"
-     data-dojo-type="dijit/layout/BorderContainer"
-     data-dojo-props="design:'headline', gutters:true"
-     style="width: 100%; height: 100%; margin-top: 0px;">
+<div id="viewDiv">
+      <div id="sidebar">
+      <div id="text">
+        <h5><strong><center>MN Food Charter Champion Map</center></strong></h5>
+        <p>Use this mapping tool to share your work and see the powerful potential for shared momentum and impact!</p>
+        <p>Click a button below to add your project to the map through a survey, leave us feedback about your experience, or request an edit.</p>
 
-  <div id="rightPane"
-       data-dojo-type="dijit/layout/ContentPane"
-       data-dojo-props="region:'right'">
+        <div><center><a href="#" style="background-color:#ffffff; color: #7e856a" class="btn btn-sm"><i style= "font-size: 2em"; class="fas fa-map-marker-alt"></i>
+        </a>
+        <a href="#" style="background-color:#ffffff; color: #7e856a" class="btn btn-sm"><i style= "font-size: 2em"; class="fas fa-comment"></i></a>
 
-    <div data-dojo-type="dijit/layout/AccordionContainer">
-      <div data-dojo-type="dijit/layout/ContentPane" id="legendPane"
-           data-dojo-props="title:'Minnesota Food Charter Legend', selected:true">
-        <div id="legendDiv">      
-        </div>
-      </div>
-      <div data-dojo-type="dijit/layout/ContentPane"
-           data-dojo-props="title:'Tools'">
-        This pane could contain tools or additional content
+        <a href="#" style="background-color:#ffffff; color: #7e856a" class="btn btn-sm"><i style= "font-size: 2em"; class="fas fa-pen-square"></i></a></center></div>
+
       </div>
     </div>
-  </div>
-  <div id="map"
-       data-dojo-type="dijit/layout/ContentPane"
-       data-dojo-props="region:'center'"
-       style="overflow:hidden;">
-  </div>
 </div>
-
-
 </body>
 </html>
