--- a/map.html
+++ b/map.html
@@ -28,7 +28,7 @@
       top: 0;
       left: 0;
       height: 100%;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.7);
       width: 210px;
     }
     #text {
@@ -44,15 +44,18 @@
           "esri/layers/FeatureLayer",
           "esri/widgets/Legend",
           "esri/widgets/Search",
+          "esri/core/watchUtils",
+          "dojo/query",
+          "dojo/aspect",
           "dojo/domReady!"
-        ], function(Map, MapView, FeatureLayer, Legend, Search) {
+        ], function(Map, MapView, FeatureLayer, Legend, Search, watchUtils, query, aspect) {
 
         var searchWidget = new Search({
           view: view
         });
 
         var popupSurvey = {
-          "content": "<h5>{field_0}</h5><b>Description:</b> {field_2}<br><b>Connected to a Food Network?:</b> {field_3} {field_4}<br><b>Food Categories:</b> {field_6}<br>"
+          "content": "<h5 style= 'margin-top: 0px;'>{field_0}</h5><b>Description:</b> {field_2}<br><b>Connected to a Food Network?:</b> {field_3} {field_4}<br><b>Food Categories:</b> {field_6}<br>"
         };
 
         var skills = {
@@ -153,14 +156,22 @@
           layerInfos: [
           {
             layer: minnesota,
-            title: "Minnesota Food Charter"
+            title: "Minnesota"
           },
           {
             layer: survey123,
-            title: "Survey Results"
+            title: "Food Categories"
           }]
 
         });
+
+          watchUtils.when(legend, "container", function() {
+            aspect.after(legend, "scheduleRender", function(response) {
+              if (query('.esri-legend__layer-caption')[0]) {
+                query('.esri-legend__layer-caption')[0].style.display = 'none';
+              }
+            });
+          });
 
         view.ui.add(legend, "bottom-left");
         view.ui.add(searchWidget, {position: "top-right"});
@@ -186,9 +197,6 @@
       <li class="nav-item active">
         <a class="nav-link" href="map.html">Map</a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
-      </li>
     </ul>
   </div>
 </nav>
@@ -198,14 +206,13 @@
       <div id="text">
         <h5><strong><center>MN Food Charter Champion Map</center></strong></h5>
         <p>Use this mapping tool to share your work and see the powerful potential for shared momentum and impact!</p>
-        <p>Click a button below to add your project to the map through a survey, leave us feedback about your experience, or request an edit.</p>
+        <p> Click a point on the map to learn more about a project. Click the buttons below to add your project to the map, leave us feedback about your experience, or request an edit.</p>
 
-        <div><center><a href="#" style="background-color:#ffffff; color: #7e856a" class="btn btn-sm"><i style= "font-size: 2em"; class="fas fa-map-marker-alt"></i>
-        </a>
-        <a href="#" style="background-color:#ffffff; color: #7e856a" class="btn btn-sm"><i style= "font-size: 2em"; class="fas fa-comment"></i></a>
+        <div><center><a href="https://survey123.arcgis.com/share/c66836257a704559b65408fa7c068782" class="btn btn-sm" target="_blank"><i style= "font-size: 1.5em"; class="fas fa-map-marker-alt"></i>  Add your Project</a><br><br>
 
-        <a href="#" style="background-color:#ffffff; color: #7e856a" class="btn btn-sm"><i style= "font-size: 2em"; class="fas fa-pen-square"></i></a></center></div>
+        <a href="https://umn.qualtrics.com/jfe/form/SV_cHhGnEf7iCundkh" class="btn btn-sm" target="_blank"><i style= "font-size: 1.5em"; class="fas fa-comment"></i>  Leave Feedback</a><br><br>
 
+        <a href="https://umn.qualtrics.com/jfe/form/SV_dnlerKzJVOwwZ0N" class="btn btn-sm" target="_blank"><i style= "font-size: 1.5em"; class="fas fa-pen-square"></i>  Request an Edit</a></center></div>
       </div>
     </div>
 </div>
