--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 
 <iframe src="https://www.youtube.com/embed/iay2qLznwbM" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
-<div style="bottom: -40px;" id="champion">
+<div id="about_title">
   <p><strong>About</strong></p>
 </div>
 
